@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2020 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -67,7 +67,7 @@ public class ConverterFactory {
             converter = converterCache.get(converterClass.getName());
             if (converter == null) {
                 try {
-                    converter = converterClass.newInstance();
+                    converter = converterClass.getConstructor().newInstance();
                     converterCache.put(converterClass.getName(), converter);
                 } catch (Exception e) {
                     // ignore
